# user_notes

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: Dockerfile  manage.py  pytest.ini
src/api/: __init__.py  logging.py  models.py
src/api/internal/: urls.py
src/api/internal/models/: notes.py
src/api/internal/serializers/: auth.py  notes.py
src/api/internal/views/: auth.py  notes.py
src/api/migrations/: 0001_initial.py
src/api/pkg/: errors.py  swagger.py
src/api/tests/: utils.py
src/api/tests/auth/: conftest.py  test_post_log_out.py  test_post_login.py  test_post_sign_in.py  test_post_sign_up.py  test_post_token_refresh.py
src/api/tests/notes/: conftest.py  test_delete_note.py  test_get_notes.py  test_post_note.py  test_put_note.py
src/config/: settings.py  urls.py
